load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "PORTABLE_COPTS", "QT_DEPS")

package(default_visibility = [
    "//src/algorithms:__subpackages__",
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

# root //:portable_closure reads this file as `data` to check that portable
# algorithms targets stay Qt-free; that reference is plumbing, not a layer
# dependency, so export it to the root package specifically rather than
# widen the package's general default_visibility.
exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "mut_dma",
    srcs = glob(
        ["*.cpp"],
        exclude = [
            "*_test.cpp",
            "qt_*.cpp",
        ],
    ),
    hdrs = glob(
        ["*.h"],
        exclude = [
            "*_test.h",
            "qt_*.h",
        ],
    ),
    copts = PORTABLE_COPTS,
    deps = ["//src/algorithms/protocol"],
)

# TRANSITIONAL Qt shim: QVector<Channel>/QVector<uint32_t> overloads delegating
# to :mut_dma, for callers not yet converted (src/backend/protocol/mut_dma_driver
# and src/ui/desktop's bench memory helpers).
cc_library(
    name = "qt_compat",
    hdrs = ["qt_mut_dma.h"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS + [":mut_dma"],
)

cc_test(
    name = "mut_dma_test",
    size = "small",
    srcs = ["mut_dma_test.cpp"],
    copts = PORTABLE_COPTS,
    deps = [
        ":mut_dma",
        "@googletest//:gtest_main",
    ],
)
