load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "PORTABLE_COPTS", "QT_DEPS")

package(default_visibility = [
    "//src/algorithms:__subpackages__",
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

# root //:portable_closure reads this file as `data` to check that portable
# algorithms targets stay Qt-free; that reference is plumbing, not a layer
# dependency, so export it to the root package specifically rather than
# widen the package's general default_visibility.
exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "ssm",
    srcs = ["ssm_protocol_core.cpp"],
    hdrs = ["ssm_protocol_core.h"],
    copts = PORTABLE_COPTS,
    deps = ["//src/algorithms/protocol"],
)

# TRANSITIONAL Qt shim: QByteArray/QString overloads delegating to :ssm.
cc_library(
    name = "qt_compat",
    srcs = ["ssm_protocol.cpp"],
    hdrs = ["ssm_protocol.h"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS + [
        ":ssm",
        "//src/algorithms/protocol:qt_compat",
    ],
)

cc_test(
    name = "ssm_protocol_core_test",
    size = "small",
    srcs = ["ssm_protocol_core_test.cpp"],
    copts = PORTABLE_COPTS,
    deps = [
        ":ssm",
        "@googletest//:gtest_main",
    ],
)
