load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "PORTABLE_COPTS", "QT_DEPS")

package(default_visibility = [
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

cc_library(
    name = "protocols",
    srcs = glob(
        ["*.cpp"],
        exclude = ["portable_*.cpp"],
    ),
    hdrs = glob(
        ["*.h"],
        exclude = ["portable_*.h"],
    ),
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS + [
        ":portable_protocols",
        "//src/algorithms/protocol",
        "//src/algorithms/protocol/ssm",
        "//src/backend/definitions",
        "//src/backend/logging",
        "//src/backend/ports",
        "//src/backend/protocol",
    ],
)

cc_library(
    name = "portable_protocols",
    srcs = [
        "portable_cdbg_logging_protocol.cpp",
        "portable_mut_dma_logging_protocol.cpp",
    ],
    hdrs = [
        "portable_cdbg_logging_protocol.h",
        "portable_mut_dma_logging_protocol.h",
    ],
    copts = PORTABLE_COPTS,
    deps = [
        "//src/backend/logging:logging_use_case",
        "//src/backend/protocol",
    ],
)
