load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:qt_targets.bzl", "PORTABLE_COPTS")

package(default_visibility = [
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

cc_library(
    name = "protocols",
    srcs = [
        "portable_cdbg_logging_protocol.cpp",
        "portable_mut_dma_logging_protocol.cpp",
        "portable_ssm_logging_protocol.cpp",
    ],
    hdrs = [
        "portable_cdbg_logging_protocol.h",
        "portable_mut_dma_logging_protocol.h",
        "portable_ssm_logging_protocol.h",
    ],
    copts = PORTABLE_COPTS,
    deps = [
        "//src/algorithms/protocol/ssm",
        "//src/backend/logging:logging_use_case",
        "//src/backend/protocol",
    ],
)
