load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "QT_DEPS", "qt_cc_library")

package(default_visibility = [
    "//apps/desktop:__pkg__",
    "//src/platform:__subpackages__",
    "//tests:__pkg__",
    # GRANDFATHERED (Task 5 human decision): //src/ui/desktop includes
    # systemlogger.h directly (mainwindow.h:95). This is a real ui ->
    # platform edge the modularization plan has not yet removed.
    "//src/ui/desktop:__pkg__",
])

MOC_HDRS = ["systemlogger.h"]

qt_cc_library(
    name = "logging",
    srcs = glob(["*.cpp"]),
    hdrs = MOC_HDRS,
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    # allow_empty: this package's only header is the MOC_HDRS entry above.
    normal_hdrs = glob(
        ["*.h"],
        allow_empty = True,
        exclude = MOC_HDRS,
    ),
    deps = QT_DEPS,
)
