load("//bazel:qt_remote_objects.bzl", "qt_replica_library")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "QT_DEPS", "qt_cc_library")

package(default_visibility = ["//visibility:public"])

qt_replica_library(
    name = "remote_utility_replicas",
    reps = ["remote_utility.rep"],
    deps = QT_DEPS,
)

MOC_HDRS = ["remote_utility.h"]

qt_cc_library(
    name = "remote_utility",
    srcs = glob(["*.cpp"]),
    hdrs = MOC_HDRS,
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    # allow_empty: this package's only header is the MOC_HDRS entry above.
    normal_hdrs = glob(
        ["*.h"],
        allow_empty = True,
        exclude = MOC_HDRS,
    ),
    deps = QT_DEPS + [
        ":remote_utility_replicas",
        # remote_utility.h #includes websocketiodevice.h and qtrohelper.hpp,
        # both owned by the serial package.
        "//src/platform/desktop/common/serial:serial_qt_compat",
    ],
)
